# notation_project

./: .gitignore  Cargo.toml  README.md  lib_layout_from_old.rs
backend/llm_api_app/: Gemfile  README.md  app.rb  zapp.rb
backend/llm_api_app/prompts/: colorize_tokens.py  document_labeling_plan.md  footer.txt  labeling_prompt.md  labeling_prompt_input.txt  llm_prompt_runner.fish  parse_document.md  reduce_block_prompt.md  tokenize_block.md  z  zz
backend/llm_api_app/public/: composition.css  index.html
backend/llm_api_app/views/: index.slim
crates/canvas-gui-renderer/: Cargo.toml  README.md
crates/notation-model/: Cargo.toml  README.md  src.tar
crates/notation-model/src/: bad  lib.rs  models.rs  oldtest
crates/wasm-bridge/: Cargo.toml  README.md
py/: .gitignore  annotated.yaml  chatgpt.memories.txt  input.txt  simple.txt  structure.yaml  structure.yml  todo.txt
py/cli/: add_annotations.py  main.py
py/lib/: annotate.py  prompting.py
py/old_notation_cli/: pyproject.toml
py/oldtools/: extract_content_from_json.fish  old_colorize.py
py/patches/: add_bin_readme.fish  add_gitignore.fish  feat_add_add_annotations_to_notation_spans_with_cli_and_attachedtrue_tracking.fish  patch_stdin_support.py
py/prompts/: footer.txt  newprompt.md  notation_example.yaml  runs.md  runs_parser.md  sample1.yaml  simplestructure.md  structure.md  tokenize_notation_spans.md
py/prompts/notation_cli/: README.md
py/prompts/structure/: bat  input.txt  input.txt.processed  output.json  output.txt  payload.json  (+4 more)
py/tools/: colorize_prompt_output.py  colorize_tokens.py
(+38 files in other folders)
