[package]
name = "canvas-gui-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
# This is the most important line. It declares that this renderer
# depends on your pure data model crate, which is located locally.
notation-model = { path = "../notation-model" }

# Add your graphics and font-handling libraries here.
# These are examples based on our previous discussion.
#   tiny-skia = "0.11"   # For 2D vector graphics and drawing to a pixel buffer.
rusttype = "0.9"     # For loading fonts and laying out glyphs.
