[tool.poetry]
name = "notation-cli"
version = "0.1.0"
description = "A CLI for parsing and viewing music notation."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.12.3"}
pyyaml = "^6.0.1"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
notation = "notation_cli.main:app"
